# sgblkdiscard

./: CMakeLists.txt  README.md  sgblkdiscard.c  sgblkdiscard_config.h.in  utils.c  utils.h
